# eQueue

./: .buildinfo  .gitignore  Dockerfile  api.api_v1.html  api.html  build.gradle.kts  core.html  core.models.html  core.schemas.html  crud.html  docker-compose.yml  genindex.html  gradle.properties  gradlew  index.html  main.html  modules.html  moodle.auth.html  moodle.courses.html  moodle.html  moodle.users.html  objects.inv  py-modindex.html  pyproject.toml  req.py  search.html  searchindex.js  settings.gradle.kts  test.json  utils.html  websocket.html
backend/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml  run.bat  up-windows.bat  up.bat
backend/docker/: Dockerfile  docker-compose.yml
backend/docs/: conf.py  core.models.rst  core.schemas.rst  crud.rst  moodle.rst  websocket.rst
backend/eQueue/: .env-template  main.py
backend/eQueue/alembic/: env.py
backend/eQueue/alembic/versions/: 2024_07_07_0316-514bd7502c50_added_base_models_and_seeder_for_groups_.py  2024_07_08_1535-dc90b8d1dbe7_group_id_now_can_be_null.py  2024_07_09_1424-4e8574ec6144_get_rid_of_subjects_table.py  2024_07_09_1448-4ac190792905_added_relation_between_workspaces_chief_.py  2024_07_10_1429-959ca985d5d4_added_cascade_on_workspace_subjects_and_.py  2024_07_10_2011-363c50ad760d_added_some_fields_to_workspace_subjects_.py  (+3 more)
backend/eQueue/api/: __init__.py
backend/eQueue/api/api_v1/: __init__.py  groups.py  (+2 more)
backend/eQueue/core/: config.py
backend/eQueue/crud/: groups.py  users.py  workspaces.py
backend/eQueue/moodle/: __init__.py
backend/eQueue/websocket/: ws_manager.py
(+259 files in other folders)
