[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standart"], version = "^0.30.1"}
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
asyncpg = "^0.29.0"
black = "^24.4.2"
alembic = "^1.13.2"
python-multipart = "^0.0.9"
websockets = "^12.0"
gunicorn = "^22.0.0"
sphinx = "^8.1.3"
pydata-sphinx-theme = "^0.15.4"
